r159 (23. 06. 2023):
Added option "Show Number of your Converts only"
Added option "Show in Trade Delay Tracker amount of killed civilians"

r158 (17. 06. 2023):
Fixed Lobby code panel overlapping with XP Overview panel

r157 (08. 06. 2023):
Updated to U237

r156 (07. 06. 2023):
The Biker Heist: Fixed a crash when mechanic started working
Drama Tracker: Tracker is disabled in Safehouse Nightmare
Drama Tracker: Tracker is disabled in endless assaults
Trade Delay Tracker: Improved accuracy with very long trade delays
Trade Delay Tracker: Tracker will use less space on the screen
Escape: Overpass: Fixed an issue where Loot Counter is not visible for clients

r155 (03. 06. 2023):
Added option to change colors in Mission Briefing XP Breakdown
Buffs: Inspire (AI) is now synced to other players
Scarface Mansion: Fixed an issue where "Settling a Scar" achievement tracker does not update correctly after alarm
Safehouse Nightmare: Trade Delay tracker is disabled
Rats Day 1: Fixed an issue where Loot Counter is not visible on OVERKILL difficulty or above
Escape: Park: Fixed an issue where Loot Counter is not visible for clients
Escape: Street: Fixed an issue where Loot Counter is not visible for clients
The Yacht Heist: Fixed an issue where achievement "Blood in the Water" is not counting correctly

r154 (22. 05. 2023):
No Mercy: Fixed missing waypoint position for the escape elevator after dropin
Shadow Raid: Fixed an issue where samurai armor is not counted in total loot count in "I am a Ninja" achievement tracker

r153 (15. 05. 2023):
Added option "Show Waypoints For Heist Elements"
Fixed a log spam when endless assault starts (client only)
Fixed "Artillery Barrage" achievement not tracked correctly
Rats Day 2: Fixed a log spam when the deal is interrupted by police
Rats Day 2: Fixed an issue where Loot Counter is showing 0 bags as maximum
Rats Day 3: Fixed an issue where Loot Counter is showing 0 bags as maximum

r152 (13. 05. 2023):