@@ -48,6 +48,9 @@ function EHI:FinalizeUnits(tbl)
                     if unit_data.ignore_visibility then
                         unit:timer_gui():SetIgnoreVisibility()
                     end
+                    if unit_data.set_custom_id then
+                        unit:timer_gui():SetCustomID(unit_data.set_custom_id)
+                    end
                     unit:timer_gui():SetWaypointPosition(unit_data.position)
                     unit:timer_gui():Finalize()
                 end
